2003-05-31 Zoran Vasiljevic <zoran@archiware.com>
	
	* generic/threadCmd.c: fixed ListRemoveInner for
	the Tcl Bug #746352

	* generic/threadSpCmd.c: modified Sp_Init to 
	return a proper value for Tcl Bug #746352

2003-05-17 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: sets the name of the new thread
	to "-tclthreead-" when compiled for AOLserver

2003-04-29 Zoran Vasiljevic <zoran@archiware.com>

        Tagged interim 2.5.2 release.

	* configure.in
	* configure: Added quick fix for autoconf issues
        related to $srcdir and building of the package
        from the top-level dir instead of unix/win subdir.
        Thanks to Mo DeJong for the fix.

2003-04-10 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: removed checking of stopped flag
	during walk of the list of active threads. This
	solves some subtle thread reservation problems
	with threads marked to unwind on error.
	Also, added new "-errorstate" configuration option
	to set/get error state of reserved unwinding thread.
	
2003-04-02 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c:
	* generic/threadPoolCmd.c:
	* generic/threadSpCmd.c:
	* generic/threadSvCmd.c: always call registered exit callbacks
	with non-NULL clientData, otherwise Tcl won't invoke
	the registered  callback. 

2003-03-28 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadSvList.c
	* generic/threadSvCmd.c: fixed some rare cases
	where we incorrectly deep-copied the list object
	having zero elements.

	* generic/threadCmd.c: fixed broken AOLserver 3.x
	compatibility mode introduced by last 4.x changes.

2003-03-17 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadSvCmd.c: fixed incompatibility 
	with Tcl 8.4.2 filepath object

	* generic/threadCmd.c:
	* aolstub.cpp: adjusted for AOLserver 4.0
 
2003-02-24 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: fixed ThreadSetResult
	to correctly initialize all elements of the 
	result structure.
